Fix empty message alignment for fresh progNotesTab view (noData)

--- a/src/clientFilePage/progNotesTab.styl
+++ b/src/clientFilePage/progNotesTab.styl
@@ -34,7 +34,8 @@
 
 			&.leftPane
 
-				.empty
+				> .empty
+					text-align center
 
 					> .message
 						padding 100px 80px 50px
